Quorum3/Library/Tests/TypeCheckerGenerated/Pass/ImpAssignBoolObjBoolObjField.quorum
class Main
    Boolean v
    v:SetValue(true)
    action Main
        Test(v)
    end

    action Test(Boolean var)
        if var:GetValue() = true
            output "passed"
        end
    end
end
