Quorum3/Library/Tests/TypeCheckerGenerated/Fail/ImpAssignTextBoolObjField.quorum
class Main
    Boolean v
    v:SetValue(true)
    action Main
        Test(v)
    end

    action Test(text var)
    end
end
